# ungood.github.com

./: CNAME  Makefile  README.md  conf.py  index.html  index.md  mise.toml  params.json  pyproject.toml
.github/workflows/: publish-book.yml
_includes/: banner.html  header.html
_layouts/: home.html
assets/stylesheets/: styles.css
resume/: _config.yml  _toc.yml  intro.md
resume/_static/: custom.css
static/: custom.css
