[tool.poetry]
name = "ungood-github-com"
version = "2.0.0"
description = "Resume for Jason Walker"
authors = ["Jason Walker <ungood@onetrue.name>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
sphinx = "<6"
myst-parser = ">0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
